--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -12,6 +12,8 @@ body {
   width: 15rem;
   height: 2rem;
   margin: 0.5rem 0;
+  font-family: "Nunito", sans-serif;
+  font-size: 1rem;
 }
 
 .page-number {
@@ -23,4 +25,10 @@ body {
 
 .page-number h1 {
   margin: 0.3rem 0;
+}
+
+.home-card-container h1 {
+  width: 100%;
+  text-align: center;
+  padding-bottom: 13rem;
 }
