--- a/client/src/components/search-bar/search-bar.css
+++ b/client/src/components/search-bar/search-bar.css
@@ -18,15 +18,11 @@
 
 .filter-container {
   display: flex;
+  justify-content: center;
   align-items: center;
-}
-
-.filter-container select {
-  width: 15rem;
-  height: 1.9rem;
-  font-family: "Nunito", sans-serif;
+  gap: 0 2rem;
 }
 
 .filter-container h2 {
-  margin: 0 1rem;
+  margin: 0;
 }
